@YELP_HELP_RULES@
HELP_ID = gnome-nibbles

HELP_MEDIA = \
	figures/diamond.svg \
	figures/snake-green.svg \
	figures/snake-red.svg \
	figures/snake-blue.svg \
	figures/snake-grey.svg \
	figures/snake-yellow.svg \
	figures/snake-cyan.svg \
	figures/snake-magenta.svg \
	figures/before-rel.png \
	figures/after-rel.png \
	figures/before-fake.png \
	figures/after-fake.png \
	figures/life.svg \
	figures/ice-cream.svg \
	figures/donut.svg \
	figures/cherry.svg

HELP_FILES = \
	basics.page \
	controls-change.page \
	controls-default.page \
	fake-bonus.page \
	index.page \
	multi-player.page \
	preferences.page \
	rel-movement.page \
	scores.page \
	legal.xml

HELP_LINGUAS = ca cs de el en_GB es eu fr it oc sl sr sr@latin sv zh_CN

-include $(top_srcdir)/git.mk
