@YELP_HELP_RULES@
HELP_ID = gnome-nibbles

HELP_MEDIA =	\
	figures/cherry.svg	\
	figures/diamond.svg	\
	figures/donut.svg	\
	figures/ice-cream.svg	\
	figures/life.svg	\
	figures/nibbles.png	\
	figures/snake-blue.svg	\
	figures/snake-cyan.svg	\
	figures/snake-green.svg	\
	figures/snake-grey.svg	\
	figures/snake-magenta.svg	\
	figures/snake-red.svg	\
	figures/snake-yellow.svg

HELP_FILES =	\
	basics.page	\
	controls-change.page	\
	controls-default.page	\
	fake-bonus.page	\
	index.page	\
	multi-player.page	\
	preferences.page	\
	scores.page	\
	legal.xml

HELP_LINGUAS = ca cs de el es fr hu pl pt_BR sv tr

-include $(top_srcdir)/git.mk
