gnome_nibbles_help_pages = [
    'basics.page',
    'controls-change.page',
    'controls-default.page',
    'fake-bonus.page',
    'index.page',
    'multi-player.page',
    'preferences.page',
    'rel-movement.page',
    'scores.page',
    'legal.xml',
]

gnome_nibbles_help_media = [
    'figures/after-rel.png',
    'figures/before-rel.png',
    'figures/cherry.svg',
    'figures/diamond.svg',
    'figures/donut.svg',
    'figures/ice-cream.svg',
    'figures/life.svg',
    'figures/nibbles.png',
    'figures/snake-blue.svg',
    'figures/snake-cyan.svg',
    'figures/snake-green.svg',
    'figures/snake-grey.svg',
    'figures/snake-magenta.svg',
    'figures/snake-red.svg',
    'figures/snake-yellow.svg',
]

gnome.yelp(meson.project_name(),
    sources: gnome_nibbles_help_pages,
    media: gnome_nibbles_help_media
)
