gnome_nibbles_help_pages = [
    'basics.page',
    'controls-change.page',
    'controls-default.page',
    'fake-bonus.page',
    'index.page',
    'multi-player.page',
    'scores.page',
    'sound-change.page',
    'speed-change.page',
    'legal.xml',
]

gnome_nibbles_help_media = [
    'figures/apple.svg',
    'figures/banana.svg',
    'figures/cherry.svg',
    'figures/diamond.svg',
    'figures/emblem-system-symbolic.svg',
    'figures/life.svg',
    'figures/nibbles.svg',
]

gnome.yelp(meson.project_name(),
    sources: gnome_nibbles_help_pages,
    media: gnome_nibbles_help_media
)
