pixmapdir=$(datadir)/pixmaps/gnibbles

BONUS_PIX=\
	1up.svg \
	blank.svg \
	cherry.svg \
	creampie.svg \
	diamond-cyan.svg \
	dollarbag.svg \
	gold.svg \
	icecream.svg \
	questionmark.svg \
	twirly.svg

SMALL_PIX=\
	snake-blue.svg \
	snake-cyan.svg \
	snake-green.svg \
	snake-grey.svg \
	snake-magenta.svg \
	snake-red.svg \
	snake-yellow.svg \
	wall-corner-bottom-left.svg \
	wall-corner-bottom-right.svg \
	wall-corner-top-left.svg \
	wall-corner-top-right.svg \
	wall-cross.svg \
	wall-empty.svg \
	wall-straight-side.svg \
	wall-straight-up.svg \
	wall-tee-down.svg \
	wall-tee-left.svg \
	wall-tee-right.svg \
	wall-tee-up.svg

pixmap_DATA= ${BONUS_PIX} ${SMALL_PIX}

