pixmapdir=$(datadir)/pixmaps/gnibbles

BONUS_PIX=\
	blank.svg \
        bonus1.svg \
        bonus2.svg \
        bonus3.svg \
        bonus4.svg \
        bonus5.svg \
        diamond.svg \
        life.svg \
        questionmark.svg


SMALL_PIX=\
	snake-blue.svg \
	snake-cyan.svg \
	snake-green.svg \
	snake-grey.svg \
	snake-magenta.svg \
	snake-red.svg \
	snake-yellow.svg \
	wall-corner-bottom-left.svg \
	wall-corner-bottom-right.svg \
	wall-corner-top-left.svg \
	wall-corner-top-right.svg \
	wall-cross.svg \
	wall-empty.svg \
	wall-straight-side.svg \
	wall-straight-up.svg \
	wall-tee-down.svg \
	wall-tee-left.svg \
	wall-tee-right.svg \
	wall-tee-up.svg

pixmap_DATA= ${BONUS_PIX} ${SMALL_PIX}

EXTRA_DIST = $(pixmap_DATA)
