levels = [
    'level001.gnl',
    'level002.gnl',
    'level003.gnl',
    'level004.gnl',
    'level005.gnl',
    'level006.gnl',
    'level007.gnl',
    'level008.gnl',
    'level009.gnl',
    'level010.gnl',
    'level011.gnl',
    'level012.gnl',
    'level013.gnl',
    'level014.gnl',
    'level015.gnl',
    'level016.gnl',
    'level017.gnl',
    'level018.gnl',
    'level019.gnl',
    'level020.gnl',
    'level021.gnl',
    'level022.gnl',
    'level023.gnl',
    'level024.gnl',
    'level025.gnl',
    'level026.gnl',
]

install_data(levels, install_dir: join_paths(pkgdatadir, 'levels'))
