bonus_pix = [
    'bonus1.svg',
    'bonus2.svg',
    'bonus3.svg',
#   'bonus4.svg',
#   'bonus5.svg',
    'diamond.svg',
    'life.svg',
    'questionmark.svg',
]

small_pix = [
    'snake-blue.svg',
    'snake-cyan.svg',
    'snake-green.svg',
    'snake-magenta.svg',
    'snake-red.svg',
    'snake-yellow.svg',
    'wall-corner-bottom-left.svg',
    'wall-corner-bottom-right.svg',
    'wall-corner-top-left.svg',
    'wall-corner-top-right.svg',
    'wall-cross.svg',
    'wall-straight-side.svg',
    'wall-straight-up.svg',
    'wall-tee-down.svg',
    'wall-tee-left.svg',
    'wall-tee-right.svg',
    'wall-tee-up.svg',
]

scoreboard_pix = [
    'scoreboard-life.svg',
]

controls_pix = [
    'arrow.svg',
]

install_data(bonus_pix + small_pix + scoreboard_pix + controls_pix,
    install_dir: join_paths(pkgdatadir, 'pixmaps'))
