icon16dir=$(datadir)/icons/hicolor/16x16/apps
icon22dir=$(datadir)/icons/hicolor/22x22/apps
icon24dir=$(datadir)/icons/hicolor/24x24/apps
icon32dir=$(datadir)/icons/hicolor/32x32/apps
icon48dir=$(datadir)/icons/hicolor/48x48/apps
iconscalabledir=$(datadir)/icons/hicolor/scalable/apps
iconsymbolicdir=$(datadir)/icons/hicolor/symbolic/apps

dist_icon16_DATA = 16x16/gnome-nibbles.png
dist_icon22_DATA = 22x22/gnome-nibbles.png
dist_icon24_DATA = 24x24/gnome-nibbles.png
dist_icon32_DATA = 32x32/gnome-nibbles.png
dist_icon48_DATA = 48x48/gnome-nibbles.png
dist_iconscalable_DATA = scalable/gnome-nibbles.svg
dist_iconsymbolic_DATA = symbolic/gnome-nibbles-symbolic.svg

-include $(top_srcdir)/git.mk
